# neural_network

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  neural_network.hpp
src/neural_network/: base.hpp  base_layer.hpp  dense.cpp  dense.hpp  full_layer.cpp  full_layer.hpp  mat.hpp  relu.cpp  relu.hpp  relu_layer.cpp  relu_layer.hpp  sequential.cpp  sequential.hpp  sigmoid.cpp  sigmoid.hpp  sigmoid_layer.cpp  sigmoid_layer.hpp  simple_loss.cpp  simple_loss.hpp  softmax_loss.cpp  softmax_loss.hpp
